--- a/services/product_service/src/main/resources/application.properties
+++ b/services/product_service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.config.import=file:services/product_service/env.properties
 spring.application.name=product_service
+server.port=8081
+#DB Config
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+#Hibernate
+spring.jpa.hibernate.ddl-auto=update
