--- a/services/order_service/src/main/resources/application.properties
+++ b/services/order_service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.config.import=file:services/order_service/env.properties
 spring.application.name=order_service
+server.port=8082
+#DB Config
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+#Hibernate
+spring.jpa.hibernate.ddl-auto=update
+#Services
+product.service.url=${PRODUCT_SERVICE_URL}
