--- a/services/api_gateway/src/main/resources/application.properties
+++ b/services/api_gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.config.import=file:services/api_gateway/env.properties
 spring.application.name=api_gateway
-server.port=8080
+server.port=${SERVER_PORT}
 #DB Config
 spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_USERNAME}
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 #JWT config
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
+#Routes
+product.service.uri=${PRODUCT_SERVICE_URI}
+order.service.uri=${ORDER_SERVICE_URI}
