--- a/services/product_service/src/main/resources/application.properties
+++ b/services/product_service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.config.import=file:services/product_service/env.properties
 spring.application.name=product_service
-server.port=8081
+server.port=${SERVER_PORT}
 #DB Config
 spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_USERNAME}
