--- a/services/order_service/src/main/resources/application.properties
+++ b/services/order_service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.config.import=file:services/order_service/env.properties
 spring.application.name=order_service
-server.port=8082
+server.port=${SERVER_PORT}
 #DB Config
 spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_USERNAME}
