--- a/services/api_gateway/src/main/resources/application.properties
+++ b/services/api_gateway/src/main/resources/application.properties
@@ -1,13 +1,8 @@
 spring.config.import=file:services/api_gateway/env.properties
 spring.application.name=api_gateway
 server.port=${SERVER_PORT}
-#DB Config
-spring.datasource.url=${POSTGRES_URL}
-spring.datasource.username=${POSTGRES_USERNAME}
-spring.datasource.password=${POSTGRES_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-#Hibernate
-spring.jpa.hibernate.ddl-auto=update
+# MongoDB Configuration
+spring.data.mongodb.uri=${MONGO_URI}
 #JWT config
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
