--- a/services/order_service/src/main/resources/application.properties
+++ b/services/order_service/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 #Services
 product.service.url=${PRODUCT_SERVICE_URL}
+#Kafka
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=orderConfirmation:com.mirkoabozzi.order_service.dto.OrderConfirmation
