added config-server & discovery-service

--- a/services/api_gateway/src/main/resources/application.properties
+++ b/services/api_gateway/src/main/resources/application.properties
@@ -1,11 +1,2 @@
-spring.config.import=file:services/api_gateway/env.properties
+spring.config.import=optional:configserver:http://localhost:8888
 spring.application.name=api_gateway
-server.port=${SERVER_PORT}
-# MongoDB Configuration
-spring.data.mongodb.uri=${MONGO_URI}
-#JWT config
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
-#Routes
-product.service.uri=${PRODUCT_SERVICE_URI}
-order.service.uri=${ORDER_SERVICE_URI}
