--- a/services/discovery/src/main/resources/application.properties
+++ b/services/discovery/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.config.import=optional:configserver:http://localhost:8888
-spring.application.name=order_service
+spring.application.name=discovery-service
