--- a/services/config-server/src/main/resources/configurations/api_gateway.properties
+++ b/services/config-server/src/main/resources/configurations/api_gateway.properties
@@ -2,7 +2,7 @@ server.port=8080
 # MongoDB Configuration
 spring.data.mongodb.uri=mongodb://mongo:1234@localhost:27017/api_gateway?authSource=admin
 #JWT config
-jwt.secret=+superSecret+
+jwt.secret=+supdgdfgsdgsdgag45xgd634534grdfgdferSedfg456cresdfsdfst+
 jwt.expiration=604800000
 #Routes
 product.service.uri=http://localhost:8081
