--- a/services/config-server/src/main/resources/configurations/api_gateway.properties
+++ b/services/config-server/src/main/resources/configurations/api_gateway.properties
@@ -7,3 +7,11 @@ jwt.expiration=604800000
 #Routes
 product.service.uri=http://localhost:8081
 order.service.uri=http://localhost:8082
+#Rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+rabbitmq.exchange.name=mail_exchange
+rabbitmq.queue.name=new_user_queue
+rabbitmq.routing.key=new_user_tracking
