refactor api gateway & added user service

--- a/services/config-server/src/main/resources/configurations/api_gateway.properties
+++ b/services/config-server/src/main/resources/configurations/api_gateway.properties
@@ -1,17 +1,7 @@
 server.port=8080
-# MongoDB Configuration
-spring.data.mongodb.uri=mongodb://mongo:1234@localhost:27017/api_gateway?authSource=admin
 #JWT config
 jwt.secret=+supdgdfgsdgsdgag45xgd634534grdfgdferSedfg456cresdfsdfst+
-jwt.expiration=604800000
 #Routes
 product.service.uri=http://localhost:8081
 order.service.uri=http://localhost:8082
-#Rabbitmq
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-rabbitmq.exchange.name=mail_exchange
-rabbitmq.queue.name=new_user_queue
-rabbitmq.routing.key=new_user_tracking
+user.service.uri=http://localhost:8085
