--- a/services/config-server/src/main/resources/configurations/user_service.properties
+++ b/services/config-server/src/main/resources/configurations/user_service.properties
@@ -9,6 +9,6 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-rabbitmq.exchange.name=mail_exchange
-rabbitmq.queue.name=new_user_queue
-rabbitmq.routing.key=new_user_tracking
+rabbitmq.mail-exchange=mail_exchange
+rabbitmq.new-user-queue=new_user_queue
+rabbitmq.new-user-routing-key=new_user_tracking
