--- a/services/config-server/src/main/resources/configurations/order_service.properties
+++ b/services/config-server/src/main/resources/configurations/order_service.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 #Services
 product.service.url=http://localhost:8081
+user.service.url=http://localhost:8085
 #Kafka
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
