--- a/services/config-server/src/main/resources/configurations/api_gateway.properties
+++ b/services/config-server/src/main/resources/configurations/api_gateway.properties
@@ -5,3 +5,34 @@ jwt.secret=+supdgdfgsdgsdgag45xgd634534grdfgdferSedfg456cresdfsdfst+
 product.service.uri=http://localhost:8081
 order.service.uri=http://localhost:8082
 user.service.uri=http://localhost:8085
+#server:
+#port: 8080
+#spring:
+#cloud:
+#gateway:
+#discovery:
+#locator:
+#enabled: true
+#routes:
+#- id: user_service
+#uri: lb:http://USER_SERVICE
+#predicates:
+#- Path=/api/users/**
+#
+#- id: order_service
+#uri: lb:http://ORDER_SERVICE
+#predicates:
+#- Path=/api/orders/**
+#
+#- id: product_service
+#uri: lb:http://PRODUCT_SERVICE
+#predicates:
+#- Path=/api/products/**
+#
+#- id: user_service
+#uri: lb:http://USER_SERVICE
+#predicates:
+#- Path=/api/auth/**
+#
+#jwt:
+#secret: +supdgdfgsdgsdgag45xgd634534grdfgdferSedfg456cresdfsdfst+
